--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,3 +8,30 @@ h1 {
 	text-align: center;
 	color: fuchsia;
 }
+
+.machineContainer {
+	width: 50%;
+	margin: 10% auto;
+	padding: 10%;
+	border: 5px solid #555;
+	text-align: center;
+
+	.readout {
+		font-size: 56px;
+		border: 2px solid black; 
+		padding: 5%;
+	}
+
+	.control-panel {
+		div {
+			display: inline-block;
+			margin: 2rem;
+			padding: 2rem;
+			border-radius: 50%;
+			border: 2px solid #555;
+			span {
+				font-size: 36px;
+			}
+		}
+	}
+}
